Made .row to just clearfix. fixed spacing.

--- a/scss/scss_grid/_grid.scss
+++ b/scss/scss_grid/_grid.scss
@@ -12,6 +12,9 @@
 		clear: both;
 	}
 }
+.row {
+	clear: both;
+}
 .grid, .grid-left {
 	[class*="#{$col_prefix}-"] {
 		float: left;
